# tigerc-rs

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  compiler.rs  error.rs  esc.rs  main.rs  parser.rs  symtab.rs  tiger.c  tiger.lalrpop  util.rs
tests/: tests.rs
tests/testcases/: dec2bin.out  dec2bin.tig  merge.in  merge.out  merge.tig  queens.tig
