[package]
name = "tigerc-rs"
version = "0.1.0"
authors = ["billsjchw <billsjc@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
lalrpop-util = "0.19.4"
regex = "1"
cranelift = "0.69.0"
cranelift-object = "0.69.0"
cranelift-module = "0.69.0"
target-lexicon = "0.11.1"
clap = "3.0.0-beta.2"
